--- a/app/assets/stylesheets/oppties.css.scss
+++ b/app/assets/stylesheets/oppties.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Oppties controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.op-title {
+	padding: 10px;
+}
+
+.manager-col-button {
+	padding-bottom: 15px;
+}
+
+.oppty-bg {
+	padding-bottom: 63px !important;
+}
+
+.btn-container {
+	margin: 25px 20px 20px 20px !important;
+} 
