--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -22,7 +22,10 @@
 	<div class="col-md-6 column-wrapper">
 	  <div class="inner-column">
 		<h2 class="column-title">Download</h2>
-		<%= link_to "Download New CRM Data", "download" %>
+		<form id="download" method="get" action="download" enctype="multipart/form-data">
+		  <button class="btn btn-lg btn-primary btn-left" type="submit">Download
+		  	<span class="glyphicon glyphicon-download"></span></button>
+		</form>
 	  </div>
 	</div>
   <!--/div-->
