--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -53,7 +53,7 @@
             style.sheet.insertRule(name+"{"+rules+"}",0);
     }
 
-    //createClass('html body div div #upload #drop input#upl.file-input #shadow-root input',"visibility: hidden !important;");
+    // ('html body div div #upload #drop input#upl.file-input #shadow-root input',"visibility: hidden !important;");
   </script>
 <body>
 
